--- a/src/components/CollectionCard.css
+++ b/src/components/CollectionCard.css
@@ -12,6 +12,21 @@
     width: 100%;
 }
 
+.details{
+    padding: 20px;
+}
+
+.name{
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.id{
+    color: #a1a5b0;
+    font-size: 18px;
+    font-weight: 600;
+}
+
 .wethImage{
     height: 23px;
     width: 15px;
