--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   padding: 0px;
 }
 
+html,body{
+    overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
